# from

./: .gitattributes
data/derived/: duka_XAUUSD_5m_20230101_20260522.parquet  eurusd_dukascopy_5m_202512.csv  eurusd_dukascopy_5m_202601.csv  eurusd_dukascopy_5m_202602.csv  eurusd_dukascopy_5m_202603.csv  eurusd_dukascopy_5m_202604.csv  eurusd_dukascopy_5m_20260501_0522.csv  eurusd_dukascopy_5m_forward_20260522_20260618.csv  eurusd_dukascopy_5m_smoke.csv  leader_AUDUSD_5m_20230101_20260521.parquet  leader_EURGBP_5m_20230101_20260521.parquet  leader_EURJPY_5m_20230101_20260521.parquet  leader_EURUSD_5m_20230101_20260521.parquet  leader_GBPJPY_5m_20230101_20260521.parquet  leader_GBPUSD_5m_20230101_20260521.parquet  leader_NZDUSD_5m_20230101_20260521.parquet  leader_UNG_GASCMDUSD_5m_20230101_20260521.parquet  leader_USDCAD_5m_20230101_20260521.parquet  leader_USDCHF_5m_20230101_20260521.parquet  leader_USDJPY_5m_20230101_20260521.parquet  leader_USO_LIGHTCMDUSD_5m_20230101_20260521.parquet  leader_XAGUSD_5m_20230101_20260521.parquet  leader_XLF_USA500IDXUSD_5m_20230101_20260521.parquet  usdjpy_dukascopy_5m_202512.csv  usdjpy_dukascopy_5m_202601.csv  usdjpy_dukascopy_5m_202602.csv  usdjpy_dukascopy_5m_202603.csv  usdjpy_dukascopy_5m_202604.csv  usdjpy_dukascopy_5m_20260501_0522.csv  usdjpy_dukascopy_5m_forward_20260522_20260618.csv  xauusd_dukascopy_5m_forward_20260522_20260618.csv  xauusd_dukascopy_5m_smoke.csv
from/: .dockerignore  .gitignore  AUDIT_LOG.md  BACKTEST.cmd  BILLION_ROWS_PER_SECOND.md  BUILD_FULL_MODEL.cmd  BUILD_MAXIMUM_PERFORMANCE.cmd  CMakeLists.txt  Dockerfile.g2-l4  EDGE_UPGRADE.md  FEATURES_100_EXPANSION.md  FIX_INFER_NORM1.md  GO.cmd  INSTALL_GLOBAL.cmd  KILL.cmd  LINKEDIN_POSTS.md  MARKETING_KIT.md  MAXIMUM_SPEED.md  MAXIMUM_SPEED_ACHIEVED.md  MEDALLION_LITE.md  OPTIMIZE_EVERYTHING.cmd  OPTIMIZE_NOW.md  README.md  REBUILD_OPTIMIZED.cmd  RUN.cmd  SPEED_FIX.md  STRATEGY_FEATURES_TODO.md  TECHNICAL_DOCUMENTATION.md  TRAIN_FAST.cmd  TRAIN_FULL.cmd  TRAIN_G2_8XL4.sh  TRAIN_MAXIMUM.cmd  build_cuda.cmd  config.toml
from/after_train/: FINAL_VERDICT.md  README.md  executive_summary.md
from/cli/: backtest.cpp  bench.cpp  commands.hpp  cost_analysis.cpp  infer.cpp  inspect.cpp  main.cpp  test.cpp  train.cpp  train_full.cpp  validate_adversarial.cpp  verify_checkpoint.cpp  walkforward.cpp  wf_metrics.hpp  wfdeep.cpp
from/include/: activations.hpp  allocator.hpp  common.h  initializers.hpp  tensor.hpp
from/src/: kernels.c  tensor.cpp
from/tools/: adversarial_xau_edge_audit.py  analyze_registry.py  build_report.py  (+36 more)
reports/: AUDIT_LOG.md  BUILD_EXTREME_PERFORMANCE.cmd  CLI.md  CMakeLists.txt  PERFORMANCE_DIAGNOSIS.md  PROJECT_LAYOUT.txt  README_from_root.md  adversarial_validation_report.json  adversarial_validation_report_conf040.json  adversarial_validation_report_ungated.json  adversarial_xau_edge_audit_report.md  adversarial_xau_edge_audit_results.json  available_leader_quality_alignment.json  available_leader_walkforward_report.md  available_leader_walkforward_results.json  bar_tf_15m_skip380m_60m_h1_anyfreq.json  bar_tf_15m_skip380m_60m_h1_target20.json  bar_tf_15m_skip380m_60m_h2_target20.json  bar_tf_15m_skip380m_60m_h4_target20.json  bar_tf_5m_skip380m_60m_h1_anyfreq.json  bar_tf_5m_skip380m_60m_h1_target20.json  bar_tf_5m_skip380m_60m_h2_target20.json  bar_tf_5m_skip380m_60m_h4_target20.json  bar_tf_60m_skip380m_60m_h1_anyfreq.json  bar_tf_60m_skip380m_60m_h1_target20.json  bar_tf_60m_skip380m_60m_h2_target20.json  bar_tf_60m_skip380m_60m_h4_target20.json  build_maximum_speed.cmd  cross_market_edge_status.md  cross_market_exact_spy_train_threshold_stability.json  cross_market_fixed_rule_stability.json  cross_market_preforward_narrow_forward_holdout.json  cross_market_repro_15m_exact_nogap.json  cross_market_repro_5m_exact_nogap.json  cross_market_repro_5m_exact_nogap_wide.json  cross_market_repro_5m_nogap_allverified.json  cross_market_repro_5m_nogap_allverified_full.json  cross_market_repro_60m_exact_nogap.json  cross_market_spy_family_stability_nogap.json  cross_market_spy_filter_search.json  (+244 more)
reports/equity_curves/: 5m_capped_equity_curve.csv  5m_uncapped_equity_curve.csv  60m_capped_equity_curve.csv  60m_uncapped_equity_curve.csv  equity_curve_summary.csv
(+246 files in other folders)
